--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,12 +1,16 @@
 footer {
-    padding: 0em 0 2em 0;
     display: flex;
-    width: 100%;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    
+    padding: 0em 0 2em 0;
+    width: 100%;
+    max-width: 80em;
 }
 
 footer > a {
+    flex: 1;
     padding: 1em;
     background-color: white;
     border: solid #aaa 1px;
