--- a/styles/header.css
+++ b/styles/header.css
@@ -2,18 +2,23 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 96vw;
+    width: 93vw;
+    max-width: 80em;
 
     padding: 1em;
     position: fixed;
     background-color: white;
 
     border-radius: 0 0 8px 8px;
-    z-index: 1;
+    z-index: 5;
 }
 
 header > h2 {
     margin-left: 1em;
+}
+
+nav {
+    display: flex;
 }
 
 nav a {
